tests/baselines/reference/override4.errors.txt
tests/cases/conformance/override/override4.ts(11,5): error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
tests/cases/conformance/override/override4.ts(13,5): error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
tests/cases/conformance/override/override4.ts(17,5): error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
tests/cases/conformance/override/override4.ts(23,5): error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'B'.


==== tests/cases/conformance/override/override4.ts (4 errors) ====
    class B {
        p1: number = 1;
        p2: number = 1;
        p3: () => void;
        p4: () => void;
        foo (v: string) {}
        fooo (v: string) {}
    }
    
    class D extends B {
        p1: number = 2;
        ~~
!!! error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
        override p2: number = 3;
        p3: () => void;
        ~~
!!! error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
        override p4: () => void;
        override foo (v: string) {}
    
        fooo (v: string) {}
        ~~~~
!!! error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
    
    }
    
    class DD extends B {
        override foo: () => void
        fooo: () => void;
        ~~~~
!!! error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
    }